ignore native access warnings since it is intended behavior