@@ -1,3 +1,3 @@
 @echo off
 cd /d "%~dp0\.."
-java -cp "bot.jar;deps/jna.jar" com.bot.Main %*
+java --enable-native-access=ALL-UNNAMED -cp "bot.jar;deps/jna.jar" com.bot.Main %*
